.metadata/.plugins/org.eclipse.cdt.ui/disc_com.build.log
21:23:53 **** Incremental Build of configuration Debug for project disc_com ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -DUSE_HAL_DRIVER -DSTM32F407xx -I../Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\usbd_conf.o ..\Src\usbd_conf.c 
..\Src\usbd_conf.c:569:20: error: conflicting types for 'USBD_LL_Transmit'
 USBD_StatusTypeDef USBD_LL_Transmit(USBD_HandleTypeDef *pdev, uint8_t ep_addr, uint8_t *pbuf, uint32_t size)
                    ^~~~~~~~~~~~~~~~
In file included from ..\Src\usbd_conf.c:26:0:
../Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_core.h:127:21: note: previous declaration of 'USBD_LL_Transmit' was here
 USBD_StatusTypeDef  USBD_LL_Transmit (USBD_HandleTypeDef *pdev,
                     ^~~~~~~~~~~~~~~~
..\Src\usbd_conf.c:589:20: error: conflicting types for 'USBD_LL_PrepareReceive'
 USBD_StatusTypeDef USBD_LL_PrepareReceive(USBD_HandleTypeDef *pdev, uint8_t ep_addr, uint8_t *pbuf, uint32_t size)
                    ^~~~~~~~~~~~~~~~~~~~~~
In file included from ..\Src\usbd_conf.c:26:0:
../Middlewares/ST/STM32_USB_Device_Library/Core/Inc/usbd_core.h:132:21: note: previous declaration of 'USBD_LL_PrepareReceive' was here
 USBD_StatusTypeDef  USBD_LL_PrepareReceive(USBD_HandleTypeDef *pdev,
                     ^~~~~~~~~~~~~~~~~~~~~~

21:23:53 Build Finished (took 380ms)

